# game-of-life

./: CMakeLists.txt  README.md  automaton_menu_screen.cpp  automaton_menu_screen.h  base_screen.cpp  base_screen.h  base_settings.h  game_logic.cpp  game_logic.h  game_screen.cpp  game_screen.h  global_macros.h  globals.h  grid_screen.cpp  grid_screen.h  main.cpp  menu_screen.cpp  menu_screen.h  pair_functors.h  pattern_input_screen.cpp  pattern_input_screen.h  pattern_menu_screen.cpp  pattern_menu_screen.h  patterns.cpp  patterns.h  rulestring_screen.cpp  rulestring_screen.h  save_screen.cpp  save_screen.h  screens.h  screens_settings.cpp  screens_settings.h
